--- a/public/index2.html
+++ b/public/index2.html
@@ -44,7 +44,7 @@
             story_input_button.onclick = function(){
                 let in_data = story_input.value;
                 if(in_data!=""){
-                    socket.emit("client-to-server",{"phase": 1, "input": in_data});
+                    socket.emit("client-to-server",{"phase": 1, "procedureNo": 0, "input": in_data});
                 }
                 else{
                     window.alert("No Input Data!...");
@@ -53,7 +53,7 @@
             story_input_button2.onclick = function(){
                 let in_data = JSON.parse(story_input.value);
                 if(in_data!=undefined){
-                    socket.emit("client-to-server",{"phase": 2, "input": in_data.output});
+                    socket.emit("client-to-server",{"phase": 2, "procedureNo": 0, "input": in_data.output});
                 }
                 else{
                     window.alert("No Input Data!...");
