index2.html modified

--- a/public/index2.html
+++ b/public/index2.html
@@ -149,7 +149,8 @@
                 }
                 document.getElementById("result").innerHTML = document.getElementById("result").innerHTML + "<br/>Phase 2.2 Completed<br/>"+JSON.stringify(data);
                 document.getElementById("result").innerHTML = document.getElementById("result").innerHTML + "<br/>Phase 2.2 Completed StoryList<br/>"+JSON.stringify(story_list);
-                window.alert("Completed"); 
+                writescreenplay();
+                window.alert("Completed");
 
             }
         });
