index2.html modified

--- a/public/index2.html
+++ b/public/index2.html
@@ -25,7 +25,7 @@
     var rewrite_flag = false;
     var story = undefined;
     var story_list = undefined;
-    var sound_file_names = [];
+    var audio_file_names = [];
     var plot_index_list = [];
     var current_plotwords = [];
     var current_phase = 0;
@@ -86,6 +86,36 @@
                     if(i>0 && story_list[i-1]!="DIALOGUE")
                         re = re + "<br/>";
                     re = re + "<b>"+story_list[i][4]+" : </b>"+story_list[i][5];
+                }
+            }
+            re = re + "<br/>&nbsp;<br/>&nbsp;<br/><button onclick=\"cp31()\">Generate Audio Transcript</button>";
+        }
+        document.getElementById("result").innerHTML = document.getElementById("result").innerHTML + re;
+    }
+
+    function writescreenplaywithaudio(){
+        re = "<hr/>";
+        document.getElementById("rewrite").innerHTML = "";
+        document.getElementById("rewrite1").innerHTML = "";
+        document.getElementById("rewrite2").innerHTML = "";
+
+        sceneno = 1;
+        if(story_list!=undefined){
+            for(i=0;i<story_list.length;++i){
+                if(story_list[i][1]=="PLOT" && story_list[i][0]!=""){
+                    re = re + "<h3>SCENE : "+sceneno+"</h3>";
+                    sceneno = sceneno + 1;
+                    re = re + "<span style=\"color: red;\">"+story_list[i][0]+"<audio controls src=\"/audio/"+audio_file_names[i]+"\"></audio>";
+                }
+                else if(story_list[i][1]=="NARRATION"){
+                    if(i>0 && story_list[i-1]!="NARRATION")
+                        re = re + "<br/>";
+                    re = re + "<span style=\"color: green;\">"+story_list[i][0]+"</span>"+"<audio controls src=\"/audio/"+audio_file_names[i]+"\"></audio>";;
+                }
+                else if(story_list[i][1]=="DIALOGUE"){
+                    if(i>0 && story_list[i-1]!="DIALOGUE")
+                        re = re + "<br/>";
+                    re = re + "<b>"+story_list[i][4]+" : </b>"+story_list[i][5]+"<audio controls src=\"/audio/"+audio_file_names[i]+"\"></audio>";
                 }
             }
             re = re + "<br/>&nbsp;<br/>&nbsp;<br/><button onclick=\"cp31()\">Generate Audio Transcript</button>";
@@ -182,9 +212,9 @@
                 document.getElementById("result").innerHTML = document.getElementById("result").innerHTML + "<br/>Phase 2.2 Started";
             }
             else if(data.phase==2 && data.procedureNo==1 && data.status=="COMPLETED"){
-                /*current_data_server = 0;
+                current_data_server = 0;
                 // Plot Completed!......
-                for(i=0;i<data.output.length;++i){
+                /*for(i=0;i<data.output.length;++i){
                     if(data.output[i][1]!=""){
                       story_list[data.output[i][0]][0] = data.output[i][1];
                       story_list[data.output[i][0]][3].push(data.output[i][1]);
@@ -212,6 +242,17 @@
                     writescreenplay();
                     window.alert("Completed");
                 }
+            }
+            else if(data.phase==3 && data.status=="STARTED"){
+                current_phase = 3;
+                current_data_server = 3;
+                document.getElementById("result").innerHTML = document.getElementById("result").innerHTML + "<br/>Phase 3 Started";
+            }
+            else if(data.phase==3 && data.status=="COMPLETED"){
+                current_data_server = 0;
+                audio_file_names = data.output;
+                document.getElementById("result").innerHTML = document.getElementById("result").innerHTML + "<br/>Phase 3 Completed";
+                writescreenplaywithaudio();
             }
         });
 
