--- a/public/page.html
+++ b/public/page.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Alyce: An A.I fine tuned Screenplay Writer</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" media="screen,projection" />
   <link rel="stylesheet" type="text/css" href="/stylesheets/timeline.css" />
   <link rel="stylesheet" type="text/css" href="/stylesheets/index.css" />
