--- a/public/page.html
+++ b/public/page.html
@@ -3,10 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <title>Alyce: An A.I fine tuned Screenplay Writer</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" media="screen,projection" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
   <link rel="stylesheet" type="text/css" href="/stylesheets/timeline.css" />
   <link rel="stylesheet" type="text/css" href="/stylesheets/index.css" />
 </head>
@@ -14,11 +13,13 @@
 <body class="loader">
   <!-- Header Section -->
   <header>
-    <div class="row" style="background-color: #007bff;">
-		<div class="col s12">
+    <div class="container-fluid">
+      <div class="row" style="background-color: #007bff;">
+        <div class="col-12">
           &nbsp;
-          <h2 class="center-align white-text">Alyce : An A.I fine tuned screenplay Writer</h2>
+          <h2 class="text-center" style="color: white;">Alyce : An A.I fine tuned screenplay Writer</h2>
         </div>
+      </div>
     </div>
   </header>
 
@@ -26,7 +27,7 @@
   <section class="fullscreen">
     <div class="container">
       <div class="row">
-        <div class="col s12">
+        <div class="col-12">
           &nbsp;
           <form>
             <div class="form-group">
@@ -37,11 +38,11 @@
         </div>
       </div>
       <div class="row">
-        <div class="col s12 m6 l4 offset-l2">
-          <button type="button" id="story_fetch_button">Fetch Sample</button>
+        <div class="col-12 col-sm-12 col-md-6 col-lg-4 offset-lg-2 py-1">
+          <button type="button" id="story_fetch_button" class="btn btn-primary btn-lg btn-block">Fetch Sample</button>
         </div>
-        <div class="col s12 m6 l4">
-          <button type="button" id="story_input_button">Send</button>
+        <div class="col-12 col-sm-12 col-md-6 col-lg-4 py-1">
+          <button type="button" id="story_input_button" class="btn btn-primary btn-lg btn-block">Send</button>
         </div>
       </div>
     </div>
@@ -49,7 +50,7 @@
   <section id="outputsec" >
 	<div class="container">
 		<div class="row">
-			<div class="col s12">
+			<div class="col-12">
 				<hr/>
 			</div>
 		</div>
@@ -127,13 +128,12 @@
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script>
     $(document).ready(function () {
       $("body").removeClass('loader');
-      var socket = io.connect();
       var curphase = 0;
       var storyList;
       tippy('.paragraph__timeline:not(.--is-horizontal) .paragraph__timeline__entry.--is-completed', {
